--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -28,11 +28,11 @@
       <li class="nav-item mr-4">
         <a class="nav-link" routerLinkActive="active" href="http://www.shop.lazsoc.ca">SHOP</a>
       </li>
-      <li class="nav-item mr-4" *ngIf="!(authService.userSignedIn$ | async)">
+      <li class="nav-item mr-4" *ngIf="!(authService.userSignedIn$)">
         <!-- <a class="nav-link" data-toggle="modal" data-target="#myModal">LOGIN</a> -->
         <a class="nav-link" routerLink="/login">LOGIN</a>
       </li>
-      <li class="nav-item dropdown" *ngIf="(authService.userSignedIn$ | async)">
+      <li class="nav-item dropdown" *ngIf="(authService.userSignedIn$)">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor:pointer">
           PROFILE
         </a>
