--- a/src/app/discount/discount.component.html
+++ b/src/app/discount/discount.component.html
@@ -8,7 +8,7 @@
 					<br><hr>
 					<span class="sub-font">Want to be another location on our list?</span>
 					<div class="gold-button mt-3">
-						<span class="white-font">Let's Chat</span>
+						<a class="white-font" href="mailto:richard@hugessen.ca">Let's Chat</a>
 					</div>
 				</div>
 			</div>
