--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -11,7 +11,21 @@
           <h1>{{articleObj.article.title}}</h1>
           <p [innerHTML]="articleObj.article.body"></p>
         </div>
+        <br>  
+        <div class="card-block">
+          <input type="text" placeholder="Say something about this..." [(ngModel)]="commentObj.body"  name="comment"/>
+          <button (click)="comment()">Comment</button>
+        </div>
+         <hr>
+         <h1> Comments</h1>
+      <p class="" *ngFor="let comment of comments.reverse()">
+        {{comment.body}} by: 
+      </p>
+
+
       </div> 
+
+
     </div>
   </div>
 </div>
