--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -44,7 +44,11 @@
              M179.2,103.6c-49.7,0-90.2,40.5-90.2,90.2c0,24.3,9.5,47,26.8,64.1L250,392.2L384.2,258c17.3-17.1,26.8-39.9,26.8-64.2
             c0-49.7-40.5-90.2-90.2-90.2c-24.1,0-46.7,9.4-63.8,26.4c-3.9,3.9-10.1,3.9-14,0C225.9,113,203.3,103.6,179.2,103.6z"/>
           </svg>
-
+          LIKES:
+          {{event.num_likes}}<br>
+          COMMENTS: 
+          {{event.num_comments}}
+          <img routerLink="/article/{{event.id}}" src="assets/img/icons/comment.svg" class="icon">
           <!-- TODO: support following buttons
           <img src="assets/img/icons/bookmark.svg" class="icon">
           <img src="assets/img/icons/arrow.svg" class="icon">
