--- a/src/app/event-page/event-page.component.html
+++ b/src/app/event-page/event-page.component.html
@@ -39,7 +39,7 @@
         <div class="card ml-2" style="width:75%">
           <div class="card-img-top">
             <img src="{{event.banner}}" class="card-img-top event-banner" *ngIf="event.banner != ''">
-            <img src="assets/img/O-Day.png" class="card-img-top event-banner" *ngIf="event.banner === ''">
+            <img src="assets/img/{{club.app_banner}}" class="card-img-top event-banner" *ngIf="event.banner === ''">
           </div>
         </div>
       </div>
