--- a/src/app/clubs/clubs.component.css
+++ b/src/app/clubs/clubs.component.css
@@ -23,9 +23,9 @@ h5 {
 
 h3 {
 	font-weight: 700;
-	font-size: 30px;
+	font-size: 35px;
 	margin-bottom: 0;
-	font-family: Montserrat, sans-serif;
+	font-family: Lato-Black;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
@@ -34,7 +34,7 @@ h3 {
 h6 {
 	font-weight: 500;
 	font-size: 200%;
-	font-family: Montserrat, sans-serif;
+	font-family: Lato-Bold;
 	color:#000000;
 	letter-spacing:0;
 	text-align:left;
@@ -69,6 +69,11 @@ h6 {
 .logo {
 	width: 170px;
 	height: auto;
+}
+
+.logo-div {
+	padding-right:30px;
+	/*background-color:lightblue;*/
 }
 
 .line-clamp-wrapper {
