--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -6,23 +6,24 @@
         <p class="under-header-text">The fun outside the classroom</p>
       </div>
       <div *ngFor="let club of clubs | mapToIterable">
-        <div class="card pointer my-1 p-2" (click)="onSelect(club.val)">
+        <div class="card pointer p-2" (click)="onSelect(club.val)">
           <div class="row container-fluid py-0 pr-0">
-            <div class="col-sm-3 col-md-3 col-lg-3">
-              <img class="logo" src="../../assets/img/thumbnails/{{club.val.app_logo}}" alt="Club Logo">
+            <div class="col-sm-3 col-md-3 col-lg-3 logo-div">
+              <img class="logo" src="assets/img/thumbnails/{{club.val.app_logo}}" style="margin-left:50px" alt="Club Logo">
             </div>
             <div class="col-sm-8 col-md-8 col-lg-8">
               <div class="d-flex flex-column align-content-center">
                 <br/>
                 <span class="title">{{club.val.name}}</span>
                 <div class="row container" id="bottom_margin_2">
-                  <p class="tags" *ngFor="let tag of club.val.club_tags; let i = index">
+                  <span class="tags" *ngFor="let tag of club.val.club_tags; let i = index">
                     <span *ngIf="i > 0">&nbsp; &bull; &nbsp;</span>
                     {{tag.tag}}
-                  </p>
+                  </span>
+                  <span class="club-description py-2">{{club.val.description}}</span>
                 </div>
               </div>
-              <p class="club-description">{{club.val.description}}</p>
+              
             </div>
           </div>
         </div>
