--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -2,7 +2,7 @@
   border-radius: 0;
 }
 .side-heading {
-  font-family:Lato-Semibold;
+  font-family:Lato-Regular;
   font-size:15px;
   color:#83868A;
   padding-left:15px;
@@ -10,7 +10,7 @@
 }
 
 .top-heading {
-  font-family:Lato-Semibold;
+  font-family:Lato-Regular;
   font-size:17px;
   color:#83868A;
   cursor:pointer;
@@ -24,10 +24,12 @@
 .active {
   border-left:6px solid #FCB518;
   padding-left:9px;
+  font-family:Lato-Semibold;
   color:black;
 }
 
 .top-text-active {
   border-bottom:6px solid #FCB518;
+  font-family:Lato-Semibold;
   color:black;
 }
