--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
             </div>
             <div class="d-flex flex-column">
               <span class="event-title-font">{{event.title}}</span>
-              <span class="event-sub-heading">{{clubs[event.club_id].name}}</span>
+              <span class="event-sub-heading">{{event.club_name}}</span>
             </div>
           </div>
         </li>
