--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -5,39 +5,41 @@
       <div class="card mt-0">
         <div class="card-block">
           <div class="form-group">
-            <div class="d-flex flex-row">
+            <div class="d-flex flex-row align-items-end">
               
-              <div class="d-flex flex-column mr-4 align-items-center" style="width:45%">
-                 <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar mr-2">
+              <div class="d-flex flex-column mr-4 align-items-center mr-3" style="width:47%">
+                 <img src="assets/img/Richard.jpg" class="avatar mr-2">
                  <p class="mb-0"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Edit</p>
               </div>
-              <div class="d-flex flex-column" style="width:45%">
+              <div class="d-flex flex-column ml-2" style="width:45%">
                 <label for="firstname">Email Address (Username)</label>
-                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+                <input type="email" class="form-control mb-3" id="firstname">
                 <label for="firstname">Password</label>
-                <input type="Password" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+                <input type="Password" class="form-control mb-3" id="firstname">
               </div>
             </div>
 
-            <div class="d-flex flex-row">
-              <div class="d-flex flex-column mr-4" style="width:45%">
+            <div class="d-flex flex-row flex-wrap">
+              <div class="form-element mr-2">
                 <label for="firstname">First Name</label>
                 <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.first_name">
-                <label for="firstname">School Program</label>
-                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.program">
-                <label for="firstname">Profile Header</label>
-                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.profile_header">
               </div>
-              <div class="d-flex flex-column" style="width:45%">
+              <div class="form-element ml-2">
                 <label for="firstname">Last Name</label>
-                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+                <input type="email" class="form-control mb-3" id="lastname" [(ngModel)]="updateObj.last_name">
+              </div>
+              <div class="form-element mr-2">
+                <label for="firstname">School Program</label>
+                <input type="email" class="form-control mb-3" id="program" [(ngModel)]="updateObj.program">
+              </div>
+              <div class="form-element ml-2">
                 <label for="firstname">School Year</label>
-                <input type="email" class="form-control mb-3" id="firstname" style="width: 30%" [(ngModel)]="updateObj.school_year">
+                <input type="email" class="form-control mb-3" id="schoolyear" style="width: 30%" [(ngModel)]="updateObj.school_year">
               </div>
             </div>
 
-            <label for="firstname">What's your story?</label><br>
-            <textarea name="name" rows="3" style="width:100%" [(ngModel)]="updateObj.summary"></textarea>
+            <label for="summary">What's your story?</label><br>
+            <textarea rows="3" style="width:100%" [(ngModel)]="updateObj.summary"></textarea>
             <label class="form-check-label">
               <input type="checkbox" class="form-check-input" [(ngModel)]="updateObj.is_bean">
               Would you like to sign up for LazBeans?
