--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
   </div>
     <div *ngFor="let event of events; let i = index">
       <ul class="list-group list-group-flush" style="cursor: pointer">
-        <li class="list-group-item py-2" style="border-bottom:1px solid lightgrey" routerLink="/events/{{event.id}}" *ngIf="i < 5 && isThisWeek(event)">
+        <li class="list-group-item py-2" style="border-bottom:1px solid lightgrey" routerLink="/events/{{event.id}}" *ngIf="i < 5">
           <div class="d-flex w-100" >
             <div class="d-flex flex-column pr-4 pl-2" style="text-align:center">
               <span class="month">{{event.start_date_time | getMonth}}</span>
