--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -13,7 +13,7 @@
        <li class="nav-item mr-4">
         <a class="nav-link" routerLink="/compose" routerLinkActive="active">COMPOSE</a>
       </li>
-      <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$ | async)">
+      <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
         <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
       </li>
       <li class="nav-item mr-4" style="cursor:pointer">
