--- a/src/app/newsfeed/newsfeed.component.css
+++ b/src/app/newsfeed/newsfeed.component.css
@@ -207,3 +207,13 @@ h5 {
   color:#83868a;
   letter-spacing:0;
 }
+
+.crop {
+  height: 140px;
+  overflow: hidden;
+}
+
+.crop img {
+  width: 100%;
+  margin: -42px 0 0 0;
+}
