--- a/src/app/article-composer/article-composer.component.css
+++ b/src/app/article-composer/article-composer.component.css
@@ -1,25 +1,12 @@
-button {
-	height: 34px;
-	border: 2px solid #433089;
-	border-radius: 2px;
-	color: #433089;
-	font-size: 16px;
-	background-color: white;
-	text-align: center;
-	padding: 5 10 5 10;
-}
-
-
 input {
-  font-family: "Roboto", sans-serif;
-  outline: 0;
+  font-family: Lato-Regular;
   background: white;
   width: 100%;
   border: 0;
   margin: 0 0 15px;
   padding: 10px 15px 10px 15px;
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .cursor-pointer {
