--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -1,13 +1,8 @@
 <div class="row justify-content-center">
-  <div class="col-sm-9 col-md-9 col-lg-9">
-    <div class="btn btn-primary" (click)="editorView = !editorView">
-      Preview
-    </div>
-    <br><br>
-    <h1> Compose an Article </h1>
+  <div class="col-sm-9 col-md-9 col-lg-9 mt-4">
     <form>
-      <input #titleValdation="ngModel" type="text" placeholder="Article Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="30">
-      <div *ngIf="titleValdation.errors && (titleValdation.dirty || titleValdation.touched)" class="alert alert-danger">
+      <input #titleValdation="ngModel" type="text" placeholder="Article Title" name="title" [(ngModel)]="title" required minlength="4" maxlength="100">
+<!--       <div *ngIf="titleValdation.errors && (titleValdation.dirty || titleValdation.touched)" class="alert alert-danger">
         <div [hidden]="!titleValdation.errors.required">
           Article title is required!
         </div>
@@ -17,17 +12,18 @@
         <div [hidden]="!titleValdation.errors.maxlength">
           Title cannot be more than 30 characters long.
         </div>
-      </div>
+      </div> -->
       <div [froalaEditor]="options" [(froalaModel)]="editorContent" *ngIf="editorView"></div>
 
-      <br><br>
-      <div class="card" *ngIf="!editorView">
+      <br>
+<!--       <div class="card" *ngIf="!editorView">
         <div class="card-block">
           <div [froalaView]="editorContent"></div>
         </div>
-      </div>
-      <button type="submit" (click)="submit()"> SUBMIT ARTICLE </button>
+      </div> -->
     </form>
+    <button class="btn btn-danger" (click)="submit()">Submit</button>
+    <br>
   </div>
 </div>
 
