--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -1,4 +1,4 @@
-<div class="card sticky" *ngIf="(authService.userSignedIn$)">
+<div class="card" *ngIf="(authService.userSignedIn$)">
   <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top" routerLink="/profile/{{tokenService.currentUserData.id}}">
   <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2" routerLink="/profile/{{tokenService.currentUserData.id}}">
   <div class="card-header d-flex align-items-center py-2" routerLink="/profile/{{tokenService.currentUserData.id}}">
@@ -7,14 +7,8 @@
       <span class="profile-subheader my-0">{{tokenService.currentUserData.program}}</span>
     </div>
   </div>
-  <ul class="list-group">
-    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" routerLink="/update" *ngIf="tokenService.userSignedIn()">Update Profile</li>
-    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">Events and Blog</li>
-    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</li>
-    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Blog</li>
-  </ul>
 </div>
-<div class="card sticky" *ngIf="!(authService.userSignedIn$)">
+<div class="card" *ngIf="!(authService.userSignedIn$)">
   <div class="card-block" style="text-align:center">
     <img src="assets/img/icons/Profile.svg" style="width:40%">
     <br>
