--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -11,7 +11,7 @@
         <a class="nav-link" routerLink="/newsfeed" routerLinkActive="active">EVENTS</a>
       </li>
        <li class="nav-item mr-4">
-        <a class="nav-link" routerLink="/compose" routerLinkActive="active">COMPOSE</a>
+        <a class="nav-link" routerLink="/compose" target="_blank" routerLinkActive="active">COMPOSE</a>
       </li>
       <li class="nav-item mr-4" *ngIf="(authService.userSignedIn$)">
         <a class="nav-link" routerLink="/beans" routerLinkActive="active">LAZBEANS</a>
