--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -17,7 +17,7 @@
             <!-- <img src="assets/img/icons/bookmark.svg" class="bookmark" (click)="saveEvent(event)"> -->
           </div>
           <div class="card-text mb-2">
-              {{event.sub_heading}} <br>
+            {{event.sub_heading}} <br>
           </div>
         </div>
         <div class="card-footer py-2">
@@ -27,35 +27,24 @@
           <!-- <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right"> -->
         </div>
       </div>
-      <div class="card mt-3 article"  *ngIf="event.typeof=='article' && (newsfeedState == 'all' || newsfeedState == 'articles')">
-        <!--TODO: Support User Profile pictures -->
-        <div class="mb-2" routerLink="/article/{{event.id}}" >
-          <img class="avatar" src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg"/>
-          <h4 class="author mb-0 inline-block">{{event.first_name}}&nbsp;{{event.last_name}}</h4>
-        </div>
-        <h1 class="title mb-1" routerLink="/article/{{event.id}}">{{event.title}}</h1>
-        <div class="card-footer py-2">
-          <svg class="icon" (click)="vote(event); event.liked = !event.liked" [ngClass]="{'red_heart': event.liked, 'reg_heart': !event.liked}" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" style="enable-background:new 0 0 500 500;" xml:space="preserve">
-          <path d="M250,416.2c-2.6,0-5.2-1-7-2.9L101.8,272c-21-20.8-32.6-48.6-32.6-78.2c0-60.7,49.4-110,110-110c26.2,0,51,9.1,70.8,25.8
-            c19.8-16.7,44.6-25.8,70.8-25.8c60.7,0,110,49.4,110,110c0,29.6-11.6,57.4-32.6,78.2L257,413.3C255.2,415.1,252.6,416.2,250,416.2z
-             M179.2,103.6c-49.7,0-90.2,40.5-90.2,90.2c0,24.3,9.5,47,26.8,64.1L250,392.2L384.2,258c17.3-17.1,26.8-39.9,26.8-64.2
-            c0-49.7-40.5-90.2-90.2-90.2c-24.1,0-46.7,9.4-63.8,26.4c-3.9,3.9-10.1,3.9-14,0C225.9,113,203.3,103.6,179.2,103.6z"/>
-          </svg>
-          LIKES:
-          {{event.num_likes}}<br>
-          COMMENTS: 
-          {{event.num_comments}}
-          <img routerLink="/article/{{event.id}}" src="assets/img/icons/comment.svg" class="icon">
-          <!-- TODO: support following buttons
-          <img src="assets/img/icons/bookmark.svg" class="icon">
-          <img src="assets/img/icons/arrow.svg" class="icon">
-          <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">-->
+      <div class="card mt-3" *ngIf="event.typeof == 'article'">
+        <div class="card-block">
+          <div class="d-flex flex-row">
+            <img src="assets/img/Blank Avatar.jpg" class="club-avatar mr-3">
+            <div class="d-flex flex-column">
+              <span class="club-title">{{event.first_name}} {{event.last_name}}</span>
+              <span class="card-datetime">Posted 5 hours ago</span>
+            </div>
+          </div>
+          <div class="card mt-3">
+            <div class="article-cover"><img src="assets/img/SampleArticleCover.jpg" class="article-cover"></div>
+            <span class="article-title p-3">{{event.title}}</span>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
 <div class="card" *ngIf="!hasEvents">
   <div class="card-header card-header-text">
     Events
