--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -1,3 +1,5 @@
+<!-- <img [src]="coverURL" style="width:100%"> -->
+<input type='image' (change)="readUrl($event)" [src]="coverURL">
 <div class="row justify-content-center">
   <div class="col-sm-9 col-md-9 col-lg-9 mt-4">
     <form>
