--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -2,7 +2,7 @@
   <div *ngFor="let event of events" style="margin-bottom:1rem; cursor:pointer">
     <div *ngIf="isVisible(event)">
     <!-- <span class="event-divider mt-4">{{object.val.divider}}</span><hr/> -->
-      <div class="card mt-3" *ngIf="event.typeof == 'event'" (click)="onSelect(event)">
+      <div class="card mt-3" *ngIf="event.typeof == 'event'" (click)="viewEvent(event)">
         <div class="card-img-top">
           <img class="card-img-top" src="assets/img/{{clubs[event.club_id].app_banner}}" *ngIf="event.banner == ''">
           <img class="card-img-top" [src]="event.banner" *ngIf="event.banner != ''">
@@ -20,19 +20,19 @@
             {{event.sub_heading}} <br>
           </div>
         </div>
-        <div class="card-footer py-2">
+<!--         <div class="card-footer py-2">
           <img src="assets/img/icons/Like.svg" class="icon">
           <img src="assets/img/icons/Save.svg" class="icon">
           <img src="assets/img/icons/Share.svg" class="icon">
-          <!-- <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right"> -->
-        </div>
+          <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
+        </div> -->
       </div>
-      <div class="card mt-3" *ngIf="event.typeof == 'article'">
+      <div class="card mt-3" *ngIf="event.typeof == 'article'" (click)="viewArticle(event)">
         <div class="card-block">
           <div class="d-flex flex-row">
             <img src="assets/img/Blank Avatar.jpg" class="club-avatar mr-3">
             <div class="d-flex flex-column">
-              <span class="club-title">{{event.first_name}} {{event.last_name}}</span>
+              <span class="club-title">{{event.author}}</span>
               <span class="card-datetime">Posted 5 hours ago</span>
             </div>
           </div>
@@ -40,6 +40,11 @@
             <div class="article-cover"><img src="assets/img/SampleArticleCover.jpg" class="article-cover"></div>
             <span class="article-title p-3">{{event.title}}</span>
           </div>
+        </div>
+        <div class="card-footer py-2">
+          <img src="assets/img/icons/Like.svg" class="icon">
+          <img src="assets/img/icons/Save.svg" class="icon">
+          <img src="assets/img/icons/Share.svg" class="icon">
         </div>
       </div>
     </div>
