--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -10,14 +10,15 @@
 
 .avatar {
   display: block;
-  width: 50px;
-  height:50px;
+  width: 55px;
+  height:55px;
   border-radius: 50%;
 }
 
 .comment-text {
 	font-family: "Times New Roman", Times, serif;
 	font-size: 20px;
+	outline: none;
 }
 
 .comment-placeholder {
@@ -49,8 +50,15 @@ textarea {
 	cursor:pointer;
 }
 
-img {
-	max-width: 100% !important;
+.richard {
+  border: none !important;
+  -webkit-box-shadow: none !important;
+  -moz-box-shadow: none !important;
+  box-shadow: none !important;
+}
+
+.article-body img { 
+  max-width: 100% !important;
 }
 
 .card {
