--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -7,26 +7,43 @@
       <div class="article-body" [innerHTML]="article.body">
       </div>
       <div class="row justify-content-center">
-      	<div class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-		      <div class="card mt-3" *ngIf="isCommentActive" (click)="toggleCommentActive()" style="cursor:pointer">
+      	<div class="col-sm-8 col-md-8 col-lg-8 col-xl-8">
+		      <div class="card mt-1" *ngIf="!isCommentActive" (click)="toggleCommentActive()" style="cursor:pointer">
 		      	<div class="card-block d-flex flex-row">
 		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
 		      		<span class="comment-placeholder mt-2">What are your thoughts?</span>
 		      	</div>
 		      </div>
-		      <div class="card mt-3 px-3" *ngIf="!isCommentActive">
+		      <div class="card mt-1 px-3" *ngIf="isCommentActive">
 		      	<div class="d-flex flex-row mt-3">
 		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
-		      		<span class="comment-name-text mt-2">Richard Hugessen</span>
+		      		<span class="comment-name-text mt-3">Richard Hugessen</span>
 		      	</div>
-		      	<textarea autofocus class="comment-text mt-2" rows="4" style="width:100%"></textarea>
+		      	<textarea 
+		      		autofocus 
+		      		placeholder="What are your thoughts?" 
+		      		class="comment-text mt-2" 
+		      		rows="3" 
+		      		style="width:100%" 
+		      		[(ngModel)]="commentStr"></textarea>
 		      	<div class="d-flex flex-row-reverse mb-2">
-		      		<button class="btn">Publish</button>
+		      		<button class="btn" (click)="comment()">Publish</button>
 		      	</div>
 		      </div>
+  	      <div class="card mt-2 px-3" *ngFor="let comment of article.comments">
+		      	<div class="d-flex flex-row mt-3">
+		      		<img src="assets/img/Blank Avatar.jpg" class="avatar mr-3">
+		      		<div class="d-flex flex-column">
+		      			<span class="comment-name-text mt-1">{{comment.author}}</span>
+		      			<span class="comment-name-text mt-1">{{comment.created_at | getPublicationDate}}</span>
+		      		</div>
+		      	</div>
+		      	<div class="comment-text m-2">
+		      		{{comment.body}}
+		      	</div>
+			    </div>
       	</div>
       </div>
-
     </div>
   </div>
 </div>
