Deletion of comments

--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -50,6 +50,12 @@ textarea {
 	cursor:pointer;
 }
 
+.delete-btn {
+	cursor:pointer;
+	font-family: Lato-Regular;
+	color:blue;
+}
+
 .richard {
   border: none !important;
   -webkit-box-shadow: none !important;
