--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -3,8 +3,8 @@
   <img src="assets/img/Blank Avatar.jpg" class="profile-avatar mr-2" routerLink="/profile/{{tokenService.currentUserData.id}}">
   <div class="card-header d-flex align-items-center py-2" routerLink="/profile/{{tokenService.currentUserData.id}}">
     <div class="d-flex flex-column" style="transform:translate(4.5em,0); cursor:pointer">
-      <h4 class="profile-name my-0">{{tokenService.currentUserData.first_name}} {{tokenService.currentUserData.last_name}}</h4>
-      <span class="profile-subheader my-0">{{tokenService.currentUserData.program}}</span>
+      <h4 class="profile-name my-0">{{authService.currentUser().first_name}} {{authService.currentUser().last_name}}</h4>
+      <span class="profile-subheader my-0">{{authService.currentUser().program}}</span>
     </div>
   </div>
 </div>
@@ -16,8 +16,8 @@
     <span class="signup-subheader">Learn about all Lazsoc has to offer</span>
     <br><br>
     <div class="signup-button mb-2" style="cursor:pointer">
-      <span class="signup-btn-text">Sign up!</span>
+      <span class="signup-btn-text" routerLink="/login">Sign up!</span>
     </div>
-    <span class="login-text" style="cursor:pointer">Or just log in!</span>
+    <span class="login-text" style="cursor:pointer" routerLink="/login">Or just log in!</span>
   </div>
 </div>
