--- a/src/app/article-composer/article-composer.component.html
+++ b/src/app/article-composer/article-composer.component.html
@@ -1,5 +1,7 @@
-<!-- <img [src]="coverURL" style="width:100%"> -->
-<input type='image' (change)="readUrl($event)" [src]="coverURL">
+<label for="file" class="crop-container">
+  <img id="cover" class="crop-cover" [src]="coverURL" style="cursor:pointer">
+</label>
+<input type='file' name="file" id="file" class="inputfile" (change)="readUrl($event)" [src]="coverURL">
 <div class="row justify-content-center">
   <div class="col-sm-9 col-md-9 col-lg-9 mt-4">
     <form>
