--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" style="background-color:white">
   <div class="row justify-content-center">
     <div class="col-sm-8 col-md-8 col-lg-8 col-xl-8" style="margin-bottom:100px">
       <img src="assets/img/SampleArticleCover.jpg" class="article-cover">
