--- a/src/app/clubs/clubs.component.html
+++ b/src/app/clubs/clubs.component.html
@@ -6,7 +6,7 @@
         <p class="under-header-text">The fun outside the classroom</p>
       </div>
       <div *ngFor="let club of clubs | mapToIterable">
-        <div class="card pointer p-2" (click)="onSelect(club.val)">
+        <div class="card pointer p-2" (click)="onSelect(club.val)" style="cursor:pointer">
           <div class="row container-fluid py-0 pr-0">
             <div class="col-sm-3 col-md-3 col-lg-3 logo-div">
               <img class="logo" src="assets/img/thumbnails/{{club.val.app_logo}}" style="margin-left:50px" alt="Club Logo">
