--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -3,7 +3,7 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <a class="navbar-brand" routerLink="/newsfeed">
-    <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="55" class="ml-3" alt="">
+    <img src="../../assets/img/LazsocWhiteLogo.png" width="auto" height="105" class="ml-3" alt="">
   </a>
   <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
     <ul class="navbar-nav mr-4">
@@ -35,12 +35,12 @@
         <!-- <a class="nav-link" data-toggle="modal" data-target="#myModal">LOGIN</a> -->
         <a class="nav-link" routerLink="/login">LOGIN</a>
       </li>
-      <li class="nav-item dropdown" *ngIf="(authService.userSignedIn$)">
+      <li class="nav-item dropdown" *ngIf="(authService.userSignedIn$) && url.url != '/update'">
         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="cursor:pointer">
           PROFILE
         </a>
         <div class="dropdown-menu profile-dropdown" aria-labelledby="navbarDropdownMenuLink" >
-          <a class="dropdown-item" routerLink="/profile/{{authService.authService.currentUserData.id}}">View Profile</a>
+          <a class="dropdown-item" routerLink="/profile/{{authService.currentUser().id}}">View Profile</a>
           <a class="dropdown-item" routerLink="/update">Update Profile Info</a>
           <a class="dropdown-item" style="cursor:pointer" (click)="signOut()">Sign Out</a>
         </div>
